# simIGL

./: .gitignore  CMakeLists.txt  README.md  callbacks.xml  license.txt  plugin.cpp  plugin.h  simIGL.lua  test.ttt
addOns/: Create dummies on mesh surface.lua  Find midpoint.lua  Measure distance and direction.lua  Mesh subdivision.lua  Point sampler interactive.lua  Point sampler service.lua  Subdivide large triangles.lua  Translate to align vertex.lua
cmake/: libigl.cmake
lua/: simIGL.lua
lua/addOns/: booleanMesh.lua
sourceCode/: callbacks.xml  plugin.cpp
tests/: test-bool.ttt  test-closestFacet.ttt  test-exactGeodesics-faces.ttt  test-exactGeodesics.ttt  test-rayTest-unilluminable-room.ttt  test-rayTest-upsample.ttt  test-sweptVolume.ttt  test-tetrahedralize.ttt  test-upsample.ttt
